<resources>
    <string name="app_name">DAO Esbjerg Carrier</string>
    <string name="dialogSelect">Select an option</string>
    <string name="Newspaper">Newspaper</string>
    <string name="LoginText">DaoApp Esbjerg</string>
    <string name="LoginText1">Carrier</string>
    <string name="Rememberme">Remember me</string>
    <string name="ChangePin">Change Pin</string>
    <string name="title_activity_route_list_map">RouteListMapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="GoogleMapsApi">AIzaSyDTEIxfNAJXeidAaxo8Y2WfP_3hwe_D_mI</string>
    <string name="dchScooter">Discharged Scooter</string>
    <string name="packagetxt">Package</string>
    <string name="Scooter">Scooter</string>
    <string name="newspapers">Newspapers</string>
    <string name="seeOnMap">See on Map</string>
    <string name="addressDetails">Address Details</string>
    <string name="mainMenu">Main Menu</string>
    <string name="reportMN">Report Missing Newspaper</string>
    <string name="reportP">Report Package</string>
    <string name="reportS">Report Scooter</string>
    <string name="routeLM">Route List / Map</string>
    <string name="login">Login</string>
    <string name="reportPr">Report Problem</string>
    <string name="workC">Work Complete</string>
    <string name="shareImages">Share Image</string>
    <string name="contacts">Contacts</string>
    <string name="changepw">Change Password</string>
    <string name="logout">LogOut</string>
    <string name="chooseNews">Choose Newspapers with long click</string>
    <string name="sendR">Send Report</string>
    <string name="clearL">Clear List</string>
    <string name="chooseRoute">Choose Route</string>
    <string name="chooseAddress">Choose Address</string>
    <string name="pckNumb">Package Number</string>
    <string name="mPackage">Missing Package</string>
    <string name="noKey">No Key</string>
    <string name="tooBig">Too Big</string>
    <string name="scooterNumb">Scooter Number</string>
    <string name="pwLights">Problem with the lights</string>
    <string name="lbCapacity">Low battery capacity</string>
    <string name="breakSteerP">Break or steering problem</string>
    <string name="flatT">Flat Tire</string>
    <string name="pwKey">Problems with the key</string>
    <string name="ayf">Are you finished?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="atR">Anything to report?</string>
    <string name="done">Done</string>

</resources>
