<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="138dp"
        android:text="@string/dialogSelect"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_report_Newspaper"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="92dp"
        android:text="@string/Newspaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_report_DischargedScooter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:text="@string/dchScooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_report_Newspaper" />

    <Button
        android:id="@+id/btn_report_Package"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:text="@string/packagetxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_report_DischargedScooter" />

    <Button
        android:id="@+id/btn_report_Scooter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="92dp"
        android:paddingBottom="20dp"
        android:text="@string/Scooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_report_Package" />


</android.support.constraint.ConstraintLayout>