<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:id="@+id/relLayout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/snippet_mainmenu_toolbar" />

    </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <Button
        android:id="@+id/btn_RouteListMap"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/routeLM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <Button
        android:id="@+id/btn_reprotProblem"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/reportPr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_RouteListMap" />

    <Button
        android:id="@+id/btn_workComplete"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:text="@string/workC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reprotProblem" />

    <Button
        android:id="@+id/btn_changePassword"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/changepw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_workComplete" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="330dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_changePassword"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>