<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivities.ReportScooterActivity">
    <RelativeLayout
        android:id="@+id/relLayout9"
        android:layout_width="match_parent"
        android:layout_height="46dp">
        <include layout="@layout/snippet_report_scooter_toolbar" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txt_report_scooterNumber"
        android:layout_width="88dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/scooterNumb"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relLayout9" />

    <CheckBox
        android:id="@+id/chck_reportLights"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/pwLights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_report_scooterNumber" />

    <CheckBox
        android:id="@+id/chck_report_lowBattery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbCapacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportLights" />

    <CheckBox
        android:id="@+id/chck_reportBreakSteering"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/breakSteerP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_report_lowBattery" />

    <CheckBox
        android:id="@+id/chck_reportFlatTire"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/flatT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportBreakSteering" />

    <CheckBox
        android:id="@+id/chck_key"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pwKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportFlatTire" />

    <Button
        android:id="@+id/btn_reportScooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/reportPr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportFlatTire" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_lights"
        app:layout_constraintEnd_toStartOf="@+id/chck_reportLights"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_report_scooterNumber" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_battery_red"
        app:layout_constraintEnd_toStartOf="@+id/chck_reportLights"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportLights" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_scooter_red"
        app:layout_constraintEnd_toStartOf="@+id/chck_reportLights"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_report_lowBattery" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_scooter_red"
        app:layout_constraintEnd_toStartOf="@+id/chck_reportLights"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportBreakSteering" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_key_red"
        app:layout_constraintEnd_toStartOf="@+id/chck_key"
        app:layout_constraintTop_toBottomOf="@+id/chck_reportFlatTire" />
</android.support.constraint.ConstraintLayout>