<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivities.ReportPackageActivity">
    <RelativeLayout
        android:id="@+id/relLayout9"
        android:layout_width="match_parent"
        android:layout_height="46dp">
        <include layout="@layout/snippet_report_package_toolbar" />
    </RelativeLayout>

    <EditText
        android:id="@+id/txt_report_package"
        android:layout_width="188dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pckNumb"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relLayout9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/chooseRoute"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_report_package" />

    <TextView
        android:id="@+id/txt_report_packageRoute"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="Route"
        android:textSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/ibtn_report_PackageRoutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txt_report_packageRoute"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <CheckBox
        android:id="@+id/chck_NoKey"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/noKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_MissingPackage" />

    <CheckBox
        android:id="@+id/chckTooBig"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tooBig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chck_NoKey" />

    <CheckBox
        android:id="@+id/chck_MissingPackage"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/mPackage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_report_packageRoute" />

    <Button
        android:id="@+id/btn_reportPackage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/reportP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chckTooBig"
        app:layout_constraintVertical_bias="0.229" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_missing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_report_packageRoute" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_missing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:srcCompat="@drawable/ic_key_red" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_missing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:srcCompat="@drawable/ic_toobig" />
</android.support.constraint.ConstraintLayout>