<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivities.ReportAddressDetailsActivity">

    <RelativeLayout
        android:id="@+id/relLayout9"
        android:layout_width="match_parent"
        android:layout_height="46dp">

        <include layout="@layout/snippet_address_details_toolbar" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txt_detailsPostCode"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relLayout9" />

    <TextView
        android:id="@+id/txt_detailsAddress"
        android:layout_width="344dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detailsPostCode" />

    <TextView
        android:id="@+id/tctv_newspapers"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="16dp"
        android:text="@string/chooseNews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_detailsAddress" />

    <ListView
        android:id="@+id/lv_detailsNewspapers"
        android:layout_width="307dp"
        android:layout_height="248dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tctv_newspapers" />

    <Button
        android:id="@+id/btn_send_addressReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sendR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_detailsNewspapers"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/btn_report_clear_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/clearL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lv_detailsNewspapers"
        app:layout_constraintVertical_bias="0.24" />

</android.support.constraint.ConstraintLayout>